fixed user's menu z-index

--- a/app/assets/styles/reports/reports-show.scss
+++ b/app/assets/styles/reports/reports-show.scss
@@ -23,7 +23,7 @@ ul.report-menu {
   border-bottom: 1px solid #CCCCCC;
   margin: 0px;
   padding: 0px;
-  z-index: 1000;
+  z-index: 900;
   position: fixed;
 
   li {
